--- a/netty4-client/pom.xml
+++ b/netty4-client/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>redis</artifactId>
-    <groupId>com.github.spullara.redis</groupId>
-    <version>0.8-SNAPSHOT</version>
+    <groupId>com.kindevil.redis</groupId>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.spullara.redis</groupId>
+  <groupId>com.kindevil.redis</groupId>
   <artifactId>netty4-client</artifactId>
-  <version>0.8-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>netty4-client</name>
@@ -20,9 +20,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.spullara.redis</groupId>
+      <groupId>com.kindevil.redis</groupId>
       <artifactId>netty4</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.spullara.java</groupId>
