--- a/netty4-server/pom.xml
+++ b/netty4-server/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>redis</artifactId>
-    <groupId>com.github.spullara.redis</groupId>
-    <version>0.8-SNAPSHOT</version>
+    <groupId>com.kindevil.redis</groupId>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -12,14 +12,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.spullara.redis</groupId>
+      <groupId>com.kindevil.redis</groupId>
       <artifactId>netty4</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
-      <groupId>com.github.spullara.redis</groupId>
+      <groupId>com.kindevil.redis</groupId>
       <artifactId>protocol</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
