--- a/netty4/pom.xml
+++ b/netty4/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.github.spullara.redis</groupId>
+    <groupId>com.kindevil.redis</groupId>
     <artifactId>redis</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -22,9 +22,9 @@
       <version>3.18.0-GA</version>
     </dependency>
     <dependency>
-      <groupId>com.github.spullara.redis</groupId>
+      <groupId>com.kindevil.redis</groupId>
       <artifactId>util</artifactId>
-      <version>0.8-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 </project>
