--- a/client/pom.xml
+++ b/client/pom.xml
@@ -1,40 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>redis</artifactId>
-    <groupId>com.kindevil.redis</groupId>
-    <version>1.0.0</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>redis</artifactId>
+        <groupId>com.kindevil.redis</groupId>
+        <version>1.0.0</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>client</artifactId>
-  <packaging>jar</packaging>
+    <artifactId>client</artifactId>
+    <packaging>jar</packaging>
 
-  <name>client</name>
-  <url>http://maven.apache.org</url>
+    <name>client</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.kindevil.redis</groupId>
-      <artifactId>protocol</artifactId>
-      <version>1.0.0</version>
-    </dependency>
-<!--
-    <dependency>
-      <groupId>redis.clients</groupId>
-      <artifactId>jedis</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jredis</groupId>
-      <artifactId>jredis-core-all</artifactId>
-      <version>a.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>-->
-  </dependencies>
+    <dependencies>
+
+    </dependencies>
 
 </project>
